Version 1.0.6 (?? ??? ????)
 - Add support for Czech UTF8
 - Add support for the other languages, too.
   Afrikaans, Albanian, Arabic, Croatian, Elven, Hebrew, Lithuanian, Serbian, Slovak, Slovenian
 - Fixed bug [ 1778587 ] upcoming.php wrong link for repeating events
 - Added Indonesian translation
Version 1.0.5 (04 Mar 2007)
 - Security patch: don't allow URL to set 'noset', which allows users
   to then set other global variables.
 - Moved over popup code from 1.1 that fixed event popups in IE
 - Patch 1519611: Added new French-UTF8 translation
 - Patch 1558537: Updated Russian translation
 - Patch 1520078: Fix for postgreSQL PHP warnings
 - Updated Basque translation
 - Patch 1519610: Updated French translation
Version 1.0.4 (07 Jun 2006)
 - Security fix: do not allow setting of "includedir" via URL when
   register_globals is enabled in php.ini
 - Fixed bug 1502099: Fix for user-app-postnuke.php
 - Updated Portugues translation
Version 1.0.3 (11 Apr 2006)
 - Patch 1456375: Day view - "Description" not translated, improper
   handling of HTML in description
 - Patch 1458663: updated Hungarian translation
 - Fixed bug 1444923: system settings error on save when ovrd=1 is used
 - Fixed bug 1420859: Problems with overriding conflict
 - Fixed bug 1445535: tables-db2.sql NULL usage was incorrect
 - Patch 1279537: Don't display confidential events in upcoming.php
 - Patch 1445335: Added Greek translations
 - Fixed bug 1406428: Bug in endhour
 - Fixed bug 1438181: DBI Interbase-Firebird connection call has wrong
   parameters
 - Fixed bug 1279804: send_reminders.php fails in v1.0.1
 - Fixed bug 1417585: vCal export of forever repeating events fails for Palm
 - Fixed bug 1417529: Can't change public access layers
 - Fixed bug 1397766: Tomorrow Report fails to This Week
 - Fixed bug 1374014 Prefs page displays option to modify Public Acces calendar..
 - Fixed bug 1382217 Glitch in handling of public access prefs
 - Added support for DB2
Version 1.0.2 (06 Dec 2005)